--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@openfeature/core": "^1.9.0",
+    "@openfeature/flagd-web-provider": "^0.7.3",
     "@openfeature/react-sdk": "^1.0.1",
+    "@openfeature/web-sdk": "^1.6.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/context-zone": "^2.0.1",
     "@opentelemetry/instrumentation-document-load": "^0.48.0",
