Implement simple proxy server + logging to Dynatrace with OpenTelemetry
* Implement a simple proxy server
* Implement feature flag toggle API to Flagd
* Implemented a simple log functionality to send log data to the Dynatrace platform

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:proxy": "tsx proxy/proxy-server.ts",
+    "dev:full": "concurrently \"npm run dev:proxy\" \"npm run dev\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,21 +17,35 @@
     "@openfeature/react-sdk": "^1.0.1",
     "@openfeature/web-sdk": "^1.6.1",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-logs": "^0.204.0",
     "@opentelemetry/context-zone": "^2.0.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.204.0",
     "@opentelemetry/instrumentation-document-load": "^0.48.0",
+    "@opentelemetry/resources": "^2.1.0",
+    "@opentelemetry/sdk-logs": "^0.204.0",
     "@opentelemetry/sdk-trace-web": "^2.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "express": "^4.19.2",
     "globals": "^16.3.0",
+    "node-fetch": "^2.7.0",
+    "tsx": "^4.19.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
